# barbiecam

./: .gitignore  README.md  decode_image.py  dev.py  pyproject.toml
